# kasm

./: .gitignore  README.md
kasm-core/src/kasm/: Address.kt  Buffer.java  ByteBuffers.java  Vectors.kt
kasm-core/src/kasm/ext/: Buffer.kt  Ext.kt
kasm-core/src/kasm/x64/: Misc.kt  Registers.kt
kasm-native/lib/: CMakeLists.txt
kasm-native/lib/buffer/: CMakeLists.txt  kasm_ExecutableBuffer.c  kasm_ExecutableBuffer.h  kasm_NativeBuffer.c  kasm_NativeBuffer.h
kasm-native/lib/capstone/: CMakeLists.txt  kasm_Capstone.c  kasm_Capstone.h
kasm-native/src/kasm/: ByteBuffers.kt  Capstone.java  CodeModel.java  Exceptions.kt  ExecutableBuffer.java  IllegalInstructionException.java  NativeBuffer.java  SegmentationFaultException.java  SignalException.java  Structure.kt  StructureFields.kt  ZeroDivisionException.java
kasm-native/test/kasm/: CapstoneTest.java  StructureTest.kt
kasm-x64/src/kasm/x64/: AbstractAssembler.kt  AbstractInstruction.kt  Assembler.kt  CpuId.kt  CpuState.kt  Disassembler.kt  Encoding.kt  InstructionTypes.kt  Instructions1.kt  Instructions10.kt  Instructions100.kt  Instructions101.kt  Instructions102.kt  Instructions103.kt  Instructions104.kt  Instructions105.kt  Instructions106.kt  Instructions107.kt  Instructions108.kt  Instructions109.kt  Instructions11.kt  Instructions110.kt  Instructions111.kt  Instructions112.kt  Instructions113.kt  Instructions114.kt  Instructions115.kt  Instructions116.kt  Instructions117.kt  Instructions118.kt  Instructions119.kt  Instructions12.kt  Instructions120.kt  Instructions121.kt  Instructions13.kt  Instructions14.kt  Instructions15.kt  Instructions16.kt  Instructions17.kt  Instructions18.kt  (+89 more)
kasm-x64/test/kasm/x64/: AssemblerTest.kt  CpuIdTest.kt  CpuStateTest.kt  EncodingTest.kt  ExecutableBufferTest.kt  NativeBufferTest.kt
